
1.40 --- ---  - --:--:-- ----

    Big thanks to an anonymous contributor for the following pieces:

    - Added WaitWindowLike and WaitWindow. See 'eg\WaitWindow.pl' for an example.
      The test.pl code changed as a consequence as I now use WaitWindowLike instead
      of sleep+FindWindowLike. 

    - Added IsWindowStyle and IsWindowStyleEx and 'eg/IsWindowStyle.pl'.

    - Added SelectTabItem and 'eg/selecttabitem.pl'.

    - Added MenuSelect and 'eg/menuselect.pl'.

    - Refactored the test code.

    - Fixed a couple of PPCODE bugs reported by a nice contributor.

    - Added SetWindowPos (thanks to Paul Covington).

    - Several TabCtrl functions (also courtesy of Paul Covington).

1.49 Wed May 08 23:08:09 2002

    - Added Win32::GuiTest::Cmd module to simplify command-line type tasks.

    - Added DibSect module (writen by Jarek Jurasz) that allows screen-shot 
      type functionality.

    - Added some pod documentation submitted by Jarek Jurasz.

    - Cleaned-up the pod docs.
 
    - Moved all constants into Win32/GuiTest/GuiTest.pc to allow them 
      to be autogenerated in the future.
 
    - Rationalized EXPORT_OK.

    - Changed makefile.pl to include author info in the ppd file.

1.49.1 Wed May 22 00:00:00 2002

    - Improved IsKeyPressed.

1.49.2 Tue Jun 04 15:39:23 2002

    - Improved IsKeyPressed (again).

    - Added VK_* constants and KEYEVENTF_* flags.

    - Added SendRawKey function.

1.50 (Test Version) Sun Jun 22 ??:??:?? 2003

    - Added use of AttachWin() for those functions that require the
      window to be attached to the calling thread's message queue.

1.50.1-ad Thu Apr 08 20:45:00 2004

    - Fixed crash with MenuSelect when used on MDI applications with documents
      maximized. (DKP)

    - Implemented pertinent parts of Jonathan A's patch for CygWin Perl. (DKP)

    - Added WindowFromPoint function and wptr.pl example script. (DKP)

    - Added the MouseClick function and documentation. (DKP)